--- a/Motaphoto/css/newStyle.css
+++ b/Motaphoto/css/newStyle.css
@@ -1,3 +1,12 @@
+/********************************carousel*****************************/
+.imgSlide{
+  width:100%;
+  height:650px;
+  object-fit:cover;
+  overflow: hidden;
+}
+
+
 /****************************************lightbox***********************/
 .lightbox {
     display: none;
@@ -41,7 +50,6 @@
 ********************POPUP*************************************/
 .lightbox {
     display: none;
-    /* visibility : hidden;*/ 
     position: fixed;
     width: 100wh;
     height: 100vh;
