--- a/Motaphoto/css/newStyle.css
+++ b/Motaphoto/css/newStyle.css
@@ -30,7 +30,10 @@
     position: absolute;
     right: 65px;
     top: 55px;
+    color: aliceblue;
     cursor: pointer;
+    background-color: green;
+    z-index: 199;
 }
 .lightbox-image-box{
     position: absolute;
@@ -84,4 +87,163 @@
     width: 100%;
     height: 100%;
 }
+ .burger-menu-icons{
+  display:none;
+ }
+ .header-logo-close{
+  display:none;
+ }
+ .burger-menu-links{
+  display:none;
+ }
+
+  /*============================ burger menu ================================= */
+  @media(max-width:768px){
+    .hero-header {      
+      height: 25vh !important;     
+  }
+    .photo-grid {
+      grid-template-columns: repeat(1, 1fr) !important;        
+    }
+    .photo-grid .img {
+      margin:0 15px;
+  }
+    .imgSlide{
+        width:100%;
+        height:30vh;
+        object-fit:cover;
+        overflow: hidden;
+      }
+      #sectionSelect{
+        margin-top:-100px;
+      }
+      #mainMenu{
+        display:block !important;
+      }
+      .my-main-menu{
+        display:none !important;
+      }
+    .burger-menu-icons {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      align-items: center;
+      cursor: pointer;
+      justify-content: end;
+      
+      
+    }
+    .burger-menu-open,
+    .burger-menu-close {
+      height: 30px;
+      width: 30px;
+      /*display: none;*/
+    }
+    
+    .burger-menu-open.active {
+      display: block;
+      position: absolute;
+      top:26px;
+      left:88%;
+    }
+    .burger-menu-close.active {
+      display:block;
+    }
+    .burger-menu-icons{
+      display:block !important;
+     }
+     
+    
+    #menu-mobile_menu{
+      text-align:center;
+      position:absolute;
+      background-color: red;
+      color:#fff;
+      height:100vh;
+      width:100%;
+      z-index:1000;
+      display:none;
+    }
+    #menu-mobile_menu >li{
+      position:relative;
+      top:28%;
+      line-height:66px;
+      font-size:2rem;
+      font-family:monospace;
+     
+    }
+    /*.burger-menu-icons {
+      display:none;
+    }*/
+    .header-logo-close{
+      height:67px;
+      padding:20px;
+    }
+    .burger-menu-close{
+      float:right;
+      line-height: 3;
+      display:none;
+    }
+    /*.burger-menu-links{
+      display:none;
+    }*/
+   
+  }
+
+  /********************footer media *************/
+  @media(max-width:768px){
+    .my-footer-menu{
+      flex-direction: column !important;
+    }
+    .my-footer-menu >li{
+      margin-right:0px !important;
+    }
+  }
+
+  @media(max-width:1024px){
+	.photo-grid .img > .overlay {
+		height:fit-content;
+		min-height: 293px;
+	}
+  }
+
+  /*@media(max-width:320px){
+    .mySlides >.hero-title {
+        font-size:8.5vw !important;
+        top:64% !important;
+    }
+    .display-photo {
+        margin:0 15px !important;
+    }
+    .eye a>img {        
+        height: 50px !important;
+    }
+    .open-fullscreen > .fullscreen {
+        height:50px !important;
+    }
+
+    /*.photo-grid .img > .overlay {
+        height: fit-content;
+        min-height: 261px;
+    }
+    .photo-grid .img {
+		position: relative;
+		height: 250px;
+	}
+    .Footerbordertop {
+        margin-top:0px;
+    }
+    .menu-footer-menu-container{
+     padding-top:50px;
+    }
+    .my-footer-menu >li{
+        line-height: 40px !important;
+    }
+    #load-all-photos, #load-more{
+        margin-top:-47px !important;
+        padding:11px 74px !important;
+    }
+}*/
+
+
 
